FlightPath 5.x Changelog
========================

2018-04-16
  Fixed bug in AdvisingScreen introduced by a previous commit, where I left off a line of code after rolling
  back changes.
  
  Restored a line of code I accidentally deleted in a previous commit, in _FlightPath.php.

2018-04-14   
  Rolled back a modification made to AdvisingScreen, as described in ticket 2291, comment #36, and implemented
  new changes from comment #42 (special thanks to Logan Buth).  This was to deal with a subtle bug involving a
  repeated course, where one of the attempts was substituted, the other not.

  Re: ticket #2311, added array of group id's to the form_state, when a year of degree data is being duplicated.
  
  Re: ticket #2312, fixed a bug where sometimes a group popup doesn't show the same branch as what the View screen
  does.  Special thanks to Logan Buth for discovering this issue and proposing the fix.
  
  Re: ticket #2294, fixed a bug where var hour courses were being advised for zero hours.  To fix this, had to add
  a new bit of javascript to advise.js, as well as a new hidden variable per course in _AdvisingScreen's draw_popup_group_course_row()
  

2018-04-11
  Fixed an issue with "clean URLs" when site is hosted on a bare domain.
  
  Updated install.php to have more instructions in the settings.php file for bare domain hosting.
  
  Fixed small issues causing PHP Notice's to show up.
  
  Fixed bug where substitutions were not displaying correctly in Display by Year view.
  

2018-04-07
  Fixed some small display issues in AdvisingScreen, to keep PHP notices from appearing.
  
  Added new hook, hook_theme_advise_degree_header_row, with special thanks to Logan Buth.


2018-03-29
  Made a bug fix to where a pie chart would display 99 if its value was above 100.  Instead, this was changed to 100.
  
  Fixed a bug in get_term_structure() where the abbreviation and long description were switched.
